vehicleId validation